# Ride-Sharing-App-Solana-Blockchain

./: .env  Anchor.toml  index.js  package-lock.json  package.json  tsconfig.json
programs/ride-sharing-program/: Cargo.toml
programs/ride-sharing-program/src/: lib.rs
ride_sharing_backend/: Anchor.toml
ride_sharing_backend/programs/ride_sharing_backend/: Cargo.toml
ride_sharing_backend/programs/ride_sharing_backend/src/: lib.rs
ride_sharing_backend/tests/: ride_sharing_backend.ts
tests/: ride-sharing-program.js  ride-sharing-program.ts
